test/fixtures/success/multiple-tags-different-name/actual.js
<div>
  <Icon svgName="foo" />
  <Icon svgName="bar" />
</div>
