test/fixtures/error/duplicate-non-default-name-prop/actual.js
<Icon type="foo" type="bar" />
